force-app/main/default/objects/Review__c/fields/Assesment__c.field-meta.xml
<CustomField>
    <fullName>Assesment__c</fullName>
    <label>Assesment</label>
    <type>TextArea</type>
</CustomField>