force-app/main/default/objects/Review__c/validationRules/Rating_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Rating__c &lt;1 ||  Rating__c &gt;5</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Enter a value between 1 to 5</errorMessage>
</ValidationRule>